2006-11-20  Christian Persch  <chpe@cvs.gnome.org>

	* brower-plugin/totemPlugin.cpp:
	Really fix test for supported schemes. Bug #375677.

2006-11-20  Christian Persch  <chpe@cvs.gnome.org>

	* brower-plugin/totemPlugin.cpp:
	Fix test for supported schemes. Bug #375677.

2006-11-19  Christian Persch  <chpe@cvs.gnome.org>

	* brower-plugin/totemPlugin.cpp:
	If 'hidden' attribute is set without value, assume we're
	hidden. Bug #376757.

2006-11-19  Christian Persch  <chpe@cvs.gnome.org>

	* brower-plugin/totemPlugin.cpp:
	Use GetURLNotify, bug #376736.
	Fix uninstalled plugin viewer binary name.

2006-11-19  Bastien Nocera  <hadess@hadess.net>

	* src/ev-sidebar.c: (ev_sidebar_close_clicked_cb): send the "closed"
	signal before hiding the sidebar, so that the sidebar button's state
	is correct after using the "Close" button (Closes: #376805)

2006-11-17  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/.cvsignore:
	* src/.cvsignore: upd

2006-11-17  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-volume.c: (bacon_volume_button_load_icons): updated
	from libbacon

2006-11-16  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Patch from Thomas Vander Stichele
	<thomas at apestaart dot org> to make GStreamer the default backend
	(Closes: #309714)

2006-11-16  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	Use AC_COMPILE_IFELSE instead of deprecated variant.

2006-11-16  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	* brower-plugin/Makefile.am:
	Compile with -fno-rtti. Cleanup unused CFLAGS. Bug #375881.

2006-11-16  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/test-parser.c: (test_data):
	* src/plparse/totem-pl-parser.c:
	(totem_pl_parser_can_parse_from_filename): Use GMappedFile instead
	of loading the whole possible playlists in memory (Closes: #375680)

2006-11-16  Christian Persch  <chpe@cvs.gnome.org>

	* browser-plugin/totemPlugin.cpp:
	Use the IO service to determine whether a given scheme is supported.
	Bug #375677.
