@@ -1,3 +1,11 @@
+2006-11-20  Bastien Nocera  <hadess@hadess.net>
+
+	* browser-plugin/totemPlugin.cpp:
+	* browser-plugin/totemPlugin.h:
+	* browser-plugin/totemStringGlue.h:
+	* configure.in: detect Mozilla 1.7 and use the proper string functions,
+	most of the code from Christian Persch (Closes: #375624)
+
 2006-11-20  Christian Persch  <chpe@cvs.gnome.org>
 
 	* brower-plugin/totemPlugin.cpp:
